--- a/less/creative.less
+++ b/less/creative.less
@@ -13,7 +13,7 @@ body {
 }
 
 hr {
-    border-color: @theme-primary;
+    border-color: #58A0C7;
     border-width: 3px;
     max-width: 50px;
 }
@@ -120,9 +120,9 @@ aside {
     }
     @media (min-width: 768px) {
         background-color: transparent;
-        border-color: fade(white, 30%);
+        border-color: fade(#58A0C7, 30%);
         .navbar-header .navbar-brand {
-            color: fade(white, 70%);
+            color: fade(#539E53, 70%);
             &:hover,
             &:focus {
                 color: white;
@@ -136,7 +136,7 @@ aside {
             }
         }
         &.affix {
-            background-color: white;
+            background-color: #58A0C7;
             border-color: fade(@gray-darker, 5%);
             .navbar-header .navbar-brand {
                 color: @theme-primary;
