updated header and next section with css and photos

--- a/css/creative.css
+++ b/css/creative.css
@@ -115,7 +115,7 @@ aside {
   }
   .navbar-default .navbar-header .navbar-brand:hover,
   .navbar-default .navbar-header .navbar-brand:focus {
-    color: white;
+    color: #539E53;
   }
   .navbar-default .nav > li > a,
   .navbar-default .nav > li > a:focus {
