--- a/less/creative.less
+++ b/less/creative.less
@@ -125,7 +125,7 @@ aside {
             color: fade(#539E53, 70%);
             &:hover,
             &:focus {
-                color: white;
+                color: #539E53;
             }
         }
         .nav > li > a,
